editted format of default file

--- a/about/index.html
+++ b/about/index.html
@@ -2,5 +2,6 @@
 layout: default
 title: About
 ---
-
-Hello this is a test.
+<div class="blurb">
+	<p>Hello there this is a test.</p>
+</div><!-- /.blurb -->
