--- a/about/index.html
+++ b/about/index.html
@@ -3,5 +3,6 @@ layout: default
 title: About
 ---
 <div class="blurb">
+	<h1>About</h1>
 	<p>Hello there this is a test.</p>
 </div><!-- /.blurb -->
