--- a/cosmic-phylogeny/index.html
+++ b/cosmic-phylogeny/index.html
@@ -3,9 +3,4 @@ layout: project
 title: "Cosmic Phylogeny"
 ---
 
-<div class="column">
-    <h1>Summary.</h1>>
-</div>
-<div class="column">
-    <p>This is some summary information.</p>
-</div>
+This is the summary.
