reformatting page layout

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
-layout: default
+layout: page
 title: Major Projects
 ---
-<div class="blurb">
-	<h1>Major Projects</h1>
-	<p><a href="/cosmic-phylogeny">Cosmic Phylogeny</a></p>
-</div><!-- /.blurb -->
+
+<a href="/cosmic-phylogeny">Cosmic Phylogeny</a>
