--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,6 @@ title: About
 ---
 <div class="blurb">
 	<h1>About</h1>
+	![image-title-here](/path/to/image.jpg){:class="img-responsive"}
 	<p>Hello there this is a test.</p>
 </div><!-- /.blurb -->
