--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,8 @@
 ---
-layout: default
+layout: page
 title: About
 ---
-<div class="blurb">
-	<h1>About</h1>
-	![image-title-here](/path/to/image.jpg){:class="img-responsive"}
-	<p>Hello there this is a test.</p>
-</div><!-- /.blurb -->
+
+![headshot](/images/headshot.jpg){:class="img-responsive"}
+
+Hello there this is a test.
