--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -2,7 +2,5 @@
 layout: page
 title: Minor Projects
 ---
-<div class="blurb">
-	<h1>Minor Projects</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+
+Test text.
