--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,6 @@ layout: page
 title: About
 ---
 
-![headshot](/images/headshot.jpg){:class="img-responsive"}
+<img src="/images/headshot.jpg" alt="headshot">
 
 Hello there this is a test.
