--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@ layout: page
 title: About
 ---
 
-<img src="/images/headshot.jpg" alt="headshot">
+<img src="/images/headshot.jpg" alt="headshot" class="center">
+<br />
 
 Hello there this is a test.
