--- a/about/index.html
+++ b/about/index.html
@@ -5,5 +5,10 @@ title: About
 
 <img src="/images/headshot.jpg" alt="headshot" class="center">
 <br />
+<br />
 
-Hello there this is a test.
+I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.
+<br />
+<br />
+
+You can check out my resume <a href="C:\Users\Holly Jackson\Dropbox (MIT)\Holly\MIT\Website\hollyjackson.github.io\files\hmj_resume.pdf">here</a>.
