editted cosmic phylogeny layout:

--- a/cosmic-phylogeny/index.html
+++ b/cosmic-phylogeny/index.html
@@ -3,4 +3,6 @@ layout: project
 title: "Cosmic Phylogeny"
 ---
 
-This is the summary.
+I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.
+
+I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.
