--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,9 @@ title: About
 
 <img src="/images/headshot.jpg" alt="headshot" class="center">
 <br />
-<br />
 
 I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.
 <br />
 <br />
 
-You can check out my resume <a href="C:\Users\Holly Jackson\Dropbox (MIT)\Holly\MIT\Website\hollyjackson.github.io\files\hmj_resume.pdf">here</a>.
+You can check out my resume <a href="/files/hmj_resume.pdf">here</a>.
