changed about page

--- a/about/index.html
+++ b/about/index.html
@@ -10,4 +10,4 @@ I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and com
 <br />
 <br />
 
-You can check out my resume <a href="/files/hmj_resume.pdf">here</a>.
+You can check out my resume <a class="static_link" href="/about/hmj_resume.pdf">here</a>.
