reformatting pages, attempt at column layout

--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,8 @@ layout: page
 title: About
 ---
 
-<img src="/images/headshot.jpg" alt="headshot" class="center">
-<br />
+<img src="/images/headshot.jpg" alt="Holly Jackson" class="center">
 
-I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.
-<br />
-<br />
+<p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
 
-You can check out my resume <a class="static_link" href="/about/hmj_resume.pdf">here</a>.
+<p>You can check out my resume <a class="static_link" href="/about/hmj_resume.pdf">here</a>.</p>
