--- a/cosmic-phylogeny/index.html
+++ b/cosmic-phylogeny/index.html
@@ -1,8 +1,15 @@
 ---
-layout: project
+layout: page
 title: "Cosmic Phylogeny"
 ---
 
-I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.
+<div class="row">
+    <div class="column">
+        <h1>Summary.</h1>>
+    </div>
+    <div class="column">
+        <p>I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
+        <p>I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+    </div>
+</div>
 
-I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.
