--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: page
 title: About
 ---
 
-<img src="/images/headshot.jpg" alt="Holly Jackson" class="center">
+<img src="/images/headshot.jpg" alt="Holly Jackson">
 
 <p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
 
