added image links

--- a/cosmic-phylogeny/index.html
+++ b/cosmic-phylogeny/index.html
@@ -5,11 +5,15 @@ title: "Cosmic Phylogeny"
 
 <div class="row">
     <div class="column">
-        <h1>Summary.</h1>>
+        <div class="content">
+            <h1 style="text-align:left">Summary.</h1>
+        </div>
     </div>
     <div class="column">
-        <p>I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
-        <p>I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+        <div class="content">
+            <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
+            <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+        </div>
     </div>
 </div>
 
