formatting details for minor projects

--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -3,4 +3,67 @@ layout: page
 title: "Minor Projects"
 ---
 
-<p>Test text.</p>
+<div class="row_grid">
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/image-processing.html">
+                    <img src="/images/image_processing.png" alt="Image Processing" style="width:100%">
+                </a>
+            </div>
+            <h2>Image Processing with a Microcontroller</h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/numerical-modeling.html">
+                    <img src="/images/numerical-modeling.jpg" alt="Numerical Modeling" style="width:100%">
+                </a>
+            </div>
+            <h2>Numerical Modeling</h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/robotic-locomotion.html">
+                    <img src="/images/robotic-locomotion.JPG" alt="Robotic Locomotion" style="width:100%">
+                </a>
+            </div>
+            <h2>Robotic Locomotion</h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/game-of-life.html">
+                    <img src="/images/game-of-life.JPG" alt="Game of Life" style="width:100%">
+                </a>
+            </div>
+            <h2>Conway's Game of Life</h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/computational-cardiology.html">
+                    <img src="/images/computational-cardiology.JPG" alt="Computational Cardiology" style="width:100%">
+                </a>
+            </div>
+            <h2>Computational Cardiology</h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/sewing-science.html">
+                    <img src="/images/sewing-science.JPG" alt="Sewing Science" style="width:100%">
+                </a>
+            </div>
+            <h2>Sewing Science</h2>
+        </div>
+    </div>
+    <!-- END GRID -->
+</div>
+
