--- a/major-projects/cosmic-phylogeny.html
+++ b/major-projects/cosmic-phylogeny.html
@@ -3,13 +3,13 @@ layout: page
 title: "Cosmic Phylogeny"
 ---
 
-<div class="row">
-    <div class="column">
+<div class="row_grid">
+    <div class="column_grid">
         <div class="content">
             <h1 style="text-align:left">Summary.</h1>
         </div>
     </div>
-    <div class="column">
+    <div class="column_grid">
         <div class="content">
             <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
             <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
