menu underlining options -- test

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: "Major Projects"
+menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 ---
 
 <!-- Portfolio Gallery Grid -->
