--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: About
+menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a class="active" href="/about">About</a>
 ---
 
 <img src="/images/headshot.jpg" alt="Holly Jackson">
