--- a/major-projects/cosmic-phylogeny.html
+++ b/major-projects/cosmic-phylogeny.html
@@ -15,5 +15,19 @@ title: "Cosmic Phylogeny"
             <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
         </div>
     </div>
+    <div class="column_grid">
+        <div class="content">
+            <h1 style="text-align:left">Publications.</h1>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <p style="text-align:left;font-weight:bold;">Traits for chemical evolution in solar twins</p>
+            <p style="text-align:left;">Trends of neutron-capture elements with stellar age</p>
+            <p style="text-align:left;">Paula Jofré, Holly Jackson, Marcelo Tucci-Maia</p>
+            <p style="text-align:left;font-style:italic;">Astronomy & Astrophysics</p>
+            <p style="text-align:left"><a href="/major-projects/aa37140-19.pdf">Paper</a></p>
+        </div>
+    </div>
 </div>
 
