--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/implicit-curves.html">
+                <a href="/major-projects/implicit-curves">
                     <img src="/images/bezier_curve.png" alt="Implicit Curves" style="width:100%">
                 </a>
             </div>
@@ -19,7 +19,7 @@ menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/cosmic-phylogeny.html">
+                <a href="/major-projects/cosmic-phylogeny">
                     <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" style="width:100%">
                 </a>
             </div>
@@ -29,7 +29,7 @@ menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/unlocking-history.html">
+                <a href="/major-projects/unlocking-history">
                     <img src="/images/brienne_letter.JPG" alt="Unlocking History" style="width:100%">
                 </a>
             </div>
@@ -39,7 +39,7 @@ menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/topological-optimization.html">
+                <a href="/major-projects/topological-optimization">
                     <img src="/images/sla_bridge.JPG" alt="Topological Optimization" style="width:100%">
                 </a>
             </div>
