--- a/major-projects/cosmic-phylogeny/index.html
+++ b/major-projects/cosmic-phylogeny/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: "Cosmic Phylogeny"
+menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 ---
 
 <div class="row_grid">
@@ -26,7 +27,7 @@ title: "Cosmic Phylogeny"
             <p style="text-align:left;">Trends of neutron-capture elements with stellar age</p>
             <p style="text-align:left;">Paula Jofré, Holly Jackson, Marcelo Tucci-Maia</p>
             <p style="text-align:left;font-style:italic;">Astronomy & Astrophysics</p>
-            <p style="text-align:left"><a href="/major-projects/aa37140-19.pdf">Paper</a></p>
+            <p style="text-align:left"><a href="/major-projects/cosmic-phylogeny/aa37140-19.pdf">Paper</a></p>
         </div>
     </div>
 </div>
