--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -8,7 +8,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/minor-projects/image-processing.html">
+                <a href="/minor-projects/image-processing">
                     <img src="/images/image_processing.png" alt="Image Processing" style="width:100%">
                 </a>
             </div>
@@ -18,7 +18,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/minor-projects/numerical-modeling.html">
+                <a href="/minor-projects/numerical-modeling">
                     <img src="/images/numerical-modeling.jpg" alt="Numerical Modeling" style="width:100%">
                 </a>
             </div>
@@ -28,7 +28,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/minor-projects/robotic-locomotion.html">
+                <a href="/minor-projects/robotic-locomotion">
                     <img src="/images/robotic-locomotion.JPG" alt="Robotic Locomotion" style="width:100%">
                 </a>
             </div>
@@ -38,7 +38,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/minor-projects/game-of-life.html">
+                <a href="/minor-projects/game-of-life">
                     <img src="/images/game-of-life.JPG" alt="Game of Life" style="width:100%">
                 </a>
             </div>
@@ -48,7 +48,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/minor-projects/computational-cardiology.html">
+                <a href="/minor-projects/computational-cardiology">
                     <img src="/images/computational-cardiology.JPG" alt="Computational Cardiology" style="width:100%">
                 </a>
             </div>
@@ -58,11 +58,21 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/minor-projects/sewing-science.html">
+                <a href="/minor-projects/sewing-science">
                     <img src="/images/sewing-science.JPG" alt="Sewing Science" style="width:100%">
                 </a>
             </div>
             <h2>Sewing Science</h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
+                <a href="/minor-projects/billiard-bots">
+                    <img src="/images/billiard-bots.JPG" alt="Billiard Bots" style="width:100%">
+                </a>
+            </div>
+            <h2>Billiard Bots</h2>
         </div>
     </div>
     <!-- END GRID -->
