--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -3,3 +3,92 @@ layout: page
 title: "Topological Optimization"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 ---
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/optimized1.JPG" style="width:100%">
+    <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/optimized2.JPG" style="width:100%">
+    <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/optimized3.JPG" style="width:100%">
+    <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/optimized4.JPG" style="width:100%">
+    <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/standard_bridge.JPG" style="width:100%">
+    <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/full_beam.JPG" style="width:100%">
+    <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/optimized4_sla.JPG" style="width:100%">
+    <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="/major-projects/topological-optimization/slideshow/full_beam_sla.JPG" style="width:100%">
+    <div class="text">Caption Three</div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span> 
+    <span class="dot" onclick="currentSlide(2)"></span> 
+    <span class="dot" onclick="currentSlide(3)"></span> 
+    <span class="dot" onclick="currentSlide(4)"></span> 
+    <span class="dot" onclick="currentSlide(5)"></span> 
+    <span class="dot" onclick="currentSlide(6)"></span> 
+    <span class="dot" onclick="currentSlide(7)"></span> 
+    <span class="dot" onclick="currentSlide(8)"></span> 
+</div>
+
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+    showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+    showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) {slideIndex = 1}    
+    if (n < 1) {slideIndex = slides.length}
+    for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+    }
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " active";
+}
+</script>
+    
