--- a/major-projects/cosmic-phylogeny/index.html
+++ b/major-projects/cosmic-phylogeny/index.html
@@ -25,7 +25,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
         <div class="content">
             <p style="text-align:left;font-weight:bold;">Traits for chemical evolution in solar twins</p>
             <p style="text-align:left;">Trends of neutron-capture elements with stellar age</p>
-            <p style="text-align:left;">Paula Jofré, Holly Jackson, Marcelo Tucci-Maia</p>
+            <p style="text-align:left;"><a style="color:#505050;">Paula Jofré,</a> Holly Jackson, <a style="color:#505050;">Marcelo Tucci-Maia</a></p>
             <p style="text-align:left;font-style:italic;">Astronomy & Astrophysics</p>
             <p style="text-align:left"><a href="/major-projects/cosmic-phylogeny/aa37140-19.pdf">Paper</a></p>
         </div>
