about page format

--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <img src="/images/headshot.jpg" alt="Holly Jackson">
 
-<p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
-
-<p>You can check out my resume <a class="static_link" href="/about/hmj_resume.pdf">here</a>.</p>
+<div class="about_container">
+    <p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
+    <p>You can check out my resume <a class="static_link" href="/about/hmj_resume.pdf">here</a>.</p>
+</div>
