--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -7,43 +7,43 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/optimized1.JPG" style="width:100%">
-    <div class="text">Caption Text</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized1.JPG" style="width:100%">
+    <div class="caption_text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/optimized2.JPG" style="width:100%">
-    <div class="text">Caption Two</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized2.JPG" style="width:100%">
+    <div class="caption_text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/optimized3.JPG" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized3.JPG" style="width:100%">
+    <div class="caption_text">Caption Three</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/optimized4.JPG" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized4.JPG" style="width:100%">
+    <div class="caption_text">Caption Three</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/standard_bridge.JPG" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/standard_bridge.JPG" style="width:100%">
+    <div class="caption_text">Caption Three</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/full_beam.JPG" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img class="slides" src="/major-projects/topological-optimization/slideshow/full_beam.JPG" style="width:100%">
+    <div class="caption_text">Caption Three</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/optimized4_sla.JPG" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized4_sla.JPG" style="width:100%">
+    <div class="caption_text">Caption Three</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="/major-projects/topological-optimization/slideshow/full_beam_sla.JPG" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img class="slides"  src="/major-projects/topological-optimization/slideshow/full_beam_sla.JPG" style="width:100%">
+    <div class="caption_text">Caption Three</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
