remove dots from slideshow

--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -52,7 +52,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 </div>
 <br>
 
-<div style="text-align:center">
+<!-- <div style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span> 
@@ -61,7 +61,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     <span class="dot" onclick="currentSlide(6)"></span> 
     <span class="dot" onclick="currentSlide(7)"></span> 
     <span class="dot" onclick="currentSlide(8)"></span> 
-</div>
+</div> -->
 
 <br>
 <br>
