format top opt section

--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -4,69 +4,93 @@ title: "Topological Optimization"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 ---
 
+<div class="row_grid">
+    <div class="column_grid">
+        <div class="content">
+            <h3 style="text-align:left">Summary.</h3>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
+            <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
+<div class="content">
+    <img class="slides" src="/major-projects/topological-optimization/stress_testing.png" alt="Stress Testing" style="width:100%">
+    <p style="text-align:left;">Stress tests of 3D-printed truss beam (left) and high stiffness-to-mass bridge (right) on an Instron 5982 load testing system.</p>
+</div>
+
+<br><br>
+
+<div class="row_grid">
+    <div class="column_grid">
+        <div class="content">
+            <h3 style="text-align:left">Publications.</h3>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <p style="text-align:left;font-weight:bold;">Topological Optimization of a Cuboct Truss Structure Using a Genetic Algorithm</p>
+            <p style="text-align:left;">Holly Jackson</p>
+            <p style="text-align:left;font-style:italic;">58th AIAA/ASCE/AHS/ASC Structures, Structural, Dynamics and Materials Conference, AIAA SciTech Forum and Exposition</p>
+            <p style="text-align:left"><a href="/major-projects/topological-optimization/HMJ_AIAA_2017.pdf">Conference Paper</a></p>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
 <div class="slideshow-container">
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized1.JPG" style="width:100%">
-    <div class="caption_text">Caption Text</div>
+    <div class="caption_text">Optimized low-mass bridge, 70 voxels, 4.1mm predicted & 0.83mm measured displacement @ 24N</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized2.JPG" style="width:100%">
-    <div class="caption_text">Caption Two</div>
+    <div class="caption_text">Optimized low-mass bridge, 80 voxels, 1.7mm predicted & 0.52mm measured displacement @ 24N</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized3.JPG" style="width:100%">
-    <div class="caption_text">Caption Three</div>
+    <div class="caption_text">Optimized high-stiffness bridge, 80 voxels, 1.6mm predicted & 0.55mm measured displacement @ 24N</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized4.JPG" style="width:100%">
-    <div class="caption_text">Caption Three</div>
+    <div class="caption_text">Optimized high-stiffness bridge, 113 voxels, 0.69mm predicted & 0.42mm measured displacement @ 24N</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/standard_bridge.JPG" style="width:100%">
-    <div class="caption_text">Caption Three</div>
+    <div class="caption_text">Standard bridge, 156 voxels, 0.69mm predicted & 0.24mm measured displacement @ 24N</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides" src="/major-projects/topological-optimization/slideshow/full_beam.JPG" style="width:100%">
-    <div class="caption_text">Caption Three</div>
+    <div class="caption_text">Full beam, 324 voxels, 0.26mm predicted & 0.20 measured displacement @ 24N</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/optimized4_sla.JPG" style="width:100%">
-    <div class="caption_text">Caption Three</div>
+    <div class="caption_text">Optimized low-mass bridge (50% scale)</div>
 </div>
 
 <div class="mySlides fade">
     <img class="slides"  src="/major-projects/topological-optimization/slideshow/full_beam_sla.JPG" style="width:100%">
-    <div class="caption_text">Caption Three</div>
+    <div class="caption_text">Full beam (50% scale)</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
-<br>
-
-<!-- <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span> 
-    <span class="dot" onclick="currentSlide(2)"></span> 
-    <span class="dot" onclick="currentSlide(3)"></span> 
-    <span class="dot" onclick="currentSlide(4)"></span> 
-    <span class="dot" onclick="currentSlide(5)"></span> 
-    <span class="dot" onclick="currentSlide(6)"></span> 
-    <span class="dot" onclick="currentSlide(7)"></span> 
-    <span class="dot" onclick="currentSlide(8)"></span> 
-</div> -->
-
-<br>
-<br>
-<br>
-<br>
 <br>
 
 <script>
