--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -91,7 +91,30 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
-<br>
+
+<br><br>
+
+<div class="row_grid">
+    <div class="column_grid">
+        <div class="content">
+            <h3 style="text-align:left">Press.</h3>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <p style="text-align:left;">"From Sewing to Bridges: Jackson Turns Her Hobby into an Award-Winning Engineering Pursuit [Women to Watch]", <a class="active" href="https://ieeexplore.ieee.org/document/8354973">IEEE Women in Engineering Magazine</a></p>
+            <p style="text-align:left;">"Supersize It!" & "Launching at Ames", <a class="active" href="https://www.nasa.gov/sites/default/files/atoms/files/techbyteswt17_4.pdf">NASA Ames TechBytes Newsletter</a></p>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
+<div align="center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LxGwbtSSbFo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<br><br>
 
 <script>
 var slideIndex = 1;
