topological optimization blurb update

--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -12,8 +12,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     </div>
     <div class="column_grid">
         <div class="content">
-            <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
-            <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+            <p style="text-align:left">Any structure carried into space must be lightweight due to the high cost of space travel.  Structures made from lattice framework are actively studied due to their simple modular assembly and high stiffness-to-mass ratio.  In 2017, I developed genetic algorithm for the rapid mass optimization and automatic generation of bridge structures with programmable stiffness properties build from a simple lattice framework (the cuboct truss).  I verified the performance of the bridge structures by physical experiment against a conventionally-designed bridge and a full envelope truss beam.  I performed this research as an intern for the Coded Structures Lab at NASA Ames Research Center under Dr. Kenneth Cheung.</p>
         </div>
     </div>
 </div>
@@ -103,7 +102,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     <div class="column_grid">
         <div class="content">
             <p style="text-align:left;">"From Sewing to Bridges: Jackson Turns Her Hobby into an Award-Winning Engineering Pursuit [Women to Watch]", <a class="active" href="https://ieeexplore.ieee.org/document/8354973">IEEE Women in Engineering Magazine</a></p>
-            <p style="text-align:left;">"Supersize It!" & "Launching at Ames", <a class="active" href="https://www.nasa.gov/sites/default/files/atoms/files/techbyteswt17_4.pdf">NASA Ames TechBytes Newsletter</a></p>
+            <p style="text-align:left;">"Supersize It!" & "Launching at Ames", <a class="active" href="https://www.nasa.gov/sites/default/files/atoms/files/techbyteswt17_4.pdf">NASA Ames TechBytes Newsletter (Winter 2017)</a></p>
         </div>
     </div>
 </div>
