--- a/minor-projects/computational-cardiology/index.html
+++ b/minor-projects/computational-cardiology/index.html
@@ -9,5 +9,5 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div align="center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6FnHQH8JeSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/6FnHQH8JeSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
