--- a/major-projects/cosmic-phylogeny/index.html
+++ b/major-projects/cosmic-phylogeny/index.html
@@ -13,7 +13,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     <div class="column_grid">
         <div class="content">
             <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
-            <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+            <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/" target="_blank">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
         </div>
     </div>
     <div class="column_grid">
