--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -109,8 +109,8 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
-<div align="center">
-    <iframe src="https://www.youtube.com/embed/LxGwbtSSbFo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video-container" align="center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LxGwbtSSbFo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <br><br>
