--- a/minor-projects/computational-cardiology/index.html
+++ b/minor-projects/computational-cardiology/index.html
@@ -8,6 +8,6 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
-<div align="center">
-<iframe src="https://www.youtube.com/embed/6FnHQH8JeSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video-container" align="center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6FnHQH8JeSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
