fix youtube link

--- a/minor-projects/image-processing/index.html
+++ b/minor-projects/image-processing/index.html
@@ -23,7 +23,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div class="video-container" align="center">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=mPehnXVb3rM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mPehnXVb3rM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <br><br>
