changes to resume, line break formatting top opt page

--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -34,10 +34,10 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     </div>
     <div class="column_grid">
         <div class="content">
-            <p style="text-align:left;font-weight:bold;">Topological Optimization of a Cuboct Truss Structure Using a Genetic Algorithm</p>
-            <p style="text-align:left;">Holly Jackson</p>
-            <p style="text-align:left;font-style:italic;">58th AIAA/ASCE/AHS/ASC Structures, Structural, Dynamics and Materials Conference, AIAA SciTech Forum and Exposition</p>
-            <p style="text-align:left"><a href="/major-projects/topological-optimization/HMJ_AIAA_2017.pdf">Conference Paper</a></p>
+            <p style="text-align:left;"><a style="font-weight:bold;">Topological Optimization of a Cuboct Truss Structure Using a Genetic Algorithm</a><br>
+            Holly Jackson<br>
+            <a style="font-style:italic;">58th AIAA/ASCE/AHS/ASC Structures, Structural, Dynamics and Materials Conference, AIAA SciTech Forum and Exposition</a><br>
+            <a href="/major-projects/topological-optimization/HMJ_AIAA_2017.pdf">Conference Paper</a></p>
         </div>
     </div>
 </div>
