--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Min
 
 <!-- Portfolio Gallery Grid -->
 <div class="row_grid">
-    <div class="column_grid">
+    <!--<div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/major-projects/implicit-curves">
@@ -15,7 +15,7 @@ menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Min
             </div>
             <h2>Implicit Curves</h2>
         </div>
-    </div>
+    </div>-->
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
