added ages to minor projects

--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -12,7 +12,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/image_processing.png" alt="Image Processing" style="width:100%">
                 </a>
             </div>
-            <h2>Image Processing with a Microcontroller</h2>
+            <h2>Image Processing with a Microcontroller (Age 19)</h2>
         </div>
     </div>
     <div class="column_grid">
@@ -22,7 +22,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/numerical-modeling.jpg" alt="Numerical Modeling" style="width:100%">
                 </a>
             </div>
-            <h2>Numerical Modeling</h2>
+            <h2>Carotid Artery Pressure Estimation (Age 19)</h2>
         </div>
     </div>
     <div class="column_grid">
@@ -32,7 +32,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/robotic-locomotion.JPG" alt="Robotic Locomotion" style="width:100%">
                 </a>
             </div>
-            <h2>Robotic Locomotion</h2>
+            <h2>Robotic Locomotion (Age 17)</h2>
         </div>
     </div>
     <div class="column_grid">
@@ -42,7 +42,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/game-of-life.JPG" alt="Game of Life" style="width:100%">
                 </a>
             </div>
-            <h2>Conway's Game of Life</h2>
+            <h2>Conway's Game of Life (Age 15)</h2>
         </div>
     </div>
     <div class="column_grid">
@@ -52,7 +52,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/computational-cardiology.JPG" alt="Computational Cardiology" style="width:100%">
                 </a>
             </div>
-            <h2>Computational Cardiology</h2>
+            <h2>Computational Cardiology (Age 14)</h2>
         </div>
     </div>
     <div class="column_grid">
@@ -62,7 +62,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/sewing-science.JPG" alt="Sewing Science" style="width:100%">
                 </a>
             </div>
-            <h2>Sewing Science</h2>
+            <h2>Sewing Science (Age 13)</h2>
         </div>
     </div>
     <div class="column_grid">
@@ -72,7 +72,7 @@ menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Min
                     <img src="/images/billiard-bots.JPG" alt="Billiard Bots" style="width:100%">
                 </a>
             </div>
-            <h2>Billiard Bots</h2>
+            <h2>Billiard Bots (Age 12)</h2>
         </div>
     </div>
     <!-- END GRID -->
