--- a/minor-projects/billiard-bots/index.html
+++ b/minor-projects/billiard-bots/index.html
@@ -3,3 +3,16 @@ layout: page
 title: "Billiard Bots"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 ---
+
+<div class="row_grid">
+    <div class="column_grid">
+        <div class="content">
+            <h3 style="text-align:left">Summary.</h3>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <p style="text-align:left">I know it seems a bit ridiculous to include a project from when I was 12 years old in this portfolio, but I always thought this project was pretty fun. :D</p>
+        </div>
+    </div>
+</div>
